# normy

./: compose.yaml
backend/: .env.sample  Cargo.toml  Makefile  rust.dockerfile  rust.dockerfile.dev
backend/migrations/2024-04-28-060008_create_users/: up.sql
backend/migrations/2024-05-06-060008_create_users/: up.sql
backend/migrations/2024-05-06-092349_create_users_and_tokens/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/auth/: jwt.rs  token.rs
backend/src/config/: constants.rs  mod.rs  setup.rs
backend/src/db/: auth.rs  connections.rs  mod.rs  user.rs
backend/src/email/: client.rs
backend/src/handlers/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  user.rs  user_token.rs
backend/src/routes/: configure.rs  mod.rs  users.rs
backend/src/types/: api.rs  auth.rs  mod.rs
backend/src/types/domain/: email.rs  mod.rs  password.rs  user.rs  user_token.rs
backend/src/utils/: mod.rs
frontend/: next.dockerfile  next.dockerfile.dev  package.json  pnpm-lock.yaml
frontend/app/: UserContext.tsx  definitions.d.ts  definitions.ts  layout.tsx  page.tsx  theme.ts  types.ts
frontend/app/_api/: endPoints.tsx
frontend/app/_components/: CardComponent.tsx  ClientProviders.tsx  DashboardLayout.tsx  DeleteConfirmation.tsx  ErrorAlert.tsx  providers.tsx
frontend/app/_config/: index.ts
frontend/app/_intl/: T.tsx  intlContext.tsx  translations.ts  useTranslation.ts
frontend/app/_routes/: api.tsx  axios.tsx
frontend/app/_services/: authService.tsx  userService.tsx
frontend/app/_utils/: UserForm.ts  UserForm.tsx  utils.ts  validations.ts
frontend/app/api/: endPoints.tsx
frontend/app/book/: page.tsx
frontend/app/components/: CardComponent.tsx  UserForm.tsx  UserInterface.tsx  UserList.tsx
frontend/app/confirm/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/services/: userService.tsx
frontend/app/signup/: page.tsx
frontend/app/users/: layout.tsx
(+28 files in other folders)
