[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.1"
actix-web = "4.5.1"
bcrypt = "0.15.1"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
postgres = "0.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.37.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
