[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.7.1"
actix-web = "4.5.1"
bcrypt = "0.15.1"
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenv = "0.15.0"
email = "0.0.21"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
lettre = "0.11.7"
log = "0.4.21"
once_cell = "1.19.0"
postgres = "0.19"
postgres-types = "0.2.6"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.37.0"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
